<resources>
    <string name="app_name">老司机</string>
    <string name="app_title">ITODs 老司机</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_scans">扫一扫</string>
    <string name="action_adds">添加好友</string>
    <string name="action_group">发起同行</string>
    <string name="action_advices">意见反馈</string>
    <string name="action_search">查找路线</string>
</resources>
